--- a/libraries/atl/sun257.tex
+++ b/libraries/atl/sun257.tex
@@ -1,509 +1,29 @@
-\documentstyle[11pt]{article}
-\pagestyle{myheadings}
+\documentclass[11pt,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 %------------------------------------------------------------------------------
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun257.0}
-\newcommand{\stardocnumber}    {257.0}
-\newcommand{\stardocauthors}   {D.S. Berry}
-\newcommand{\stardocdate}      {3rd July 2006}
-\newcommand{\stardoctitle}     {ATL \\ [\latex{1ex}]
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun\stardocnumber}
+\stardocnumber      {257.1}
+\stardocauthors     {D.S. Berry}
+\stardocdate        {3rd July 2006}
+\stardoctitle       {ATL \\ [\latex{1ex}]
                                 A Library of AST Utility Routines}
-\newcommand{\stardocversion}   {Version 1.0}
-\newcommand{\stardocmanual}    {Programmer's Manual}
+\stardocversion     {Version 1.0}
+\stardocmanual      {Programmer's Manual}
+\stardocabstract {%
+ATL provides high level utility functions for handling WCS and other
+AST-related tasks.
+}
 % ? End of document identification
 % -----------------------------------------------------------------------------
 
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
-
-
-
-% ? End of document specific commands
-% -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-   {\LARGE\bf \stardocversion \\ [4ex]}
-   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\bf Abstract}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \renewcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-
-
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%   ==================
-
-ATL provides high level utility functions for handling WCS and other
-AST-related tasks.
-
-% ? End of document
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
- \newpage
- \begin{latexonly}
-   \setlength{\parskip}{0mm}
-   \latexonlytoc
-   \setlength{\parskip}{\medskipamount}
-   \markright{\stardocname}
- \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 \section {Introduction}
 
@@ -580,13 +100,13 @@ higher-level utility tasks.
 
          \sstitem
          The new axes are appended to the end of the existing axes, so the
-         axis indices associated with the new axes will extend from {\tt "}nold$+$1{\tt "}
-         to {\tt "}nold$+$nnew{\tt "}, where {\tt "}nold{\tt "} is the number of axes in the original
-         Frame, and {\tt "}nnew{\tt "} is the number of new axes.
+         axis indices associated with the new axes will extend from \texttt{"}nold$+$1\texttt{"}
+         to \texttt{"}nold$+$nnew\texttt{"}, where \texttt{"}nold\texttt{"} is the number of axes in the original
+         Frame, and \texttt{"}nnew\texttt{"} is the number of new axes.
 
          \sstitem
-         An error will be reported if the Nout attribute of {\tt "}map{\tt "} is
-         different to the Naxes attribute of {\tt "}frm{\tt "}.
+         An error will be reported if the Nout attribute of \texttt{"}map\texttt{"} is
+         different to the Naxes attribute of \texttt{"}frm\texttt{"}.
       }
    }
 }
@@ -603,8 +123,8 @@ higher-level utility tasks.
       added into the FrameSet, one of which becomes the new current
       Frame. The only case in which more than one new Frame is added
       is if the current Frame has too many axes, and the FrameSet
-      contains more than one {\tt "}ROI{\tt "} Frame (that is, Frames which are
-      Regions and which have a Domain name beginning with {\tt "}ROI{\tt "}). If
+      contains more than one \texttt{"}ROI\texttt{"} Frame (that is, Frames which are
+      Regions and which have a Domain name beginning with \texttt{"}ROI\texttt{"}). If
       the FrameSet contains zero or one ROI Frame, then only a single
       new Frame is added into the FrameSet.
 
@@ -635,7 +155,7 @@ higher-level utility tasks.
 
       If it is not possible to determine the value for a dropped axis
       in this way, then a search is made for Frames that are Regions
-      having a Domain name beginning with {\tt "}ROI{\tt "}. If any are found,
+      having a Domain name beginning with \texttt{"}ROI\texttt{"}. If any are found,
       then a new Frame is added into the FrameSet for each ROI Region
       found, connected to the original current Frame via a PermMap.
       The values to be assigned to the dropped axes by the inverse
@@ -646,7 +166,7 @@ higher-level utility tasks.
       name of the corresponding ROI Region is stored in the Ident
       attribute of each new Frame so that later code can identify the
       corresponding ROI Region, and is also appended to the end of the
-      Frame{\tt '}s Domain. The new Frame corresponding to the first ROI
+      Frame\texttt{'}s Domain. The new Frame corresponding to the first ROI
       Region found in the FrameSet is left as the current Frame on exit.
    }
    \sstinvocation{
@@ -687,7 +207,7 @@ higher-level utility tasks.
       \sstsubsection{
          WORK( $*$ ) = INTEGER (Given)
       }{
-         Work space. It{\tt '}s length should be at least twice as large as
+         Work space. It\texttt{'}s length should be at least twice as large as
          the largest pixel dimension implied by LBND and UBND.
       }
       \sstsubsection{
@@ -720,7 +240,7 @@ higher-level utility tasks.
       \sstsubsection{
          REGEXP = CHARACTER $*$ ( $*$ ) (Given)
       }{
-         The regular expression. See {\tt "}Template Syntax:{\tt "} in the astChrSub
+         The regular expression. See \texttt{"}Template Syntax:\texttt{"} in the astChrSub
          prologue. Note, this function differs from astChrSub in that any
          equals signs (=) in the regular expression are treated literally.
       }
@@ -729,7 +249,7 @@ higher-level utility tasks.
       }{
          The index of the character that follows the last character within
          the supplied test string (STR) that matched any parenthesises
-         sub-section of {\tt "}regexp{\tt "}. A value of 0 is returned if no matches
+         sub-section of \texttt{"}regexp\texttt{"}. A value of 0 is returned if no matches
          were found.
       }
       \sstsubsection{
@@ -757,7 +277,7 @@ higher-level utility tasks.
          by more than one sub-string within the test string, then only the
          first is returned. To return multiple matches, the regular
          expression should include multiple copies of the parenthesised
-         sub-string (for instance, separated by {\tt "}.$+$?{\tt "} if the intervening
+         sub-string (for instance, separated by \texttt{"}.$+$?\texttt{"} if the intervening
          string is immaterial).
       }
    }
@@ -823,14 +343,14 @@ higher-level utility tasks.
          the colon. The string before the colon indicates the format
          required for the output text file:
 
-         {\tt "}AST:{\tt "}      - AST\_SHOW format
-         {\tt "}STCS:{\tt "}     - STCS format
-         {\tt "}XML:{\tt "}      - AST XML format
-         {\tt "}FITS-xxx:{\tt "} - FITS, using the specified encoding
-         {\tt "}NATIVE:{\tt "}   - FITS, using NATIVE encoding
+         \texttt{"}AST:\texttt{"}      - AST\_SHOW format
+         \texttt{"}STCS:\texttt{"}     - STCS format
+         \texttt{"}XML:\texttt{"}      - AST XML format
+         \texttt{"}FITS-xxx:\texttt{"} - FITS, using the specified encoding
+         \texttt{"}NATIVE:\texttt{"}   - FITS, using NATIVE encoding
 
          The default (i.e. used if the string does not contain a
-         colon) is {\tt "}AST{\tt "}.
+         colon) is \texttt{"}AST\texttt{"}.
       }
       \sstsubsection{
          IAST = INTEGER (Given)
@@ -1075,7 +595,7 @@ higher-level utility tasks.
          ERRMSG = CHARACTER $*$ ( $*$ ) (Given)
       }{
          The error message to report if the key is not found. This may
-         include references to the MSG token {\tt "}$\wedge$K{\tt "} which will hold the
+         include references to the MSG token \texttt{"}$\wedge$K\texttt{"} which will hold the
          supplied key name.
       }
       \sstsubsection{
@@ -1634,11 +1154,11 @@ higher-level utility tasks.
          \sstitem
          If the group contains the dump of a Channel (of any class),
          then the Object returned via IAST will be the Channel itself. The
-         exception to this is that if the {\tt "}Begin {\tt "} line at the start of
-         the dump ends with the string {\tt "}(Read){\tt "}, then the returned IAST
+         exception to this is that if the \texttt{"}Begin \texttt{"} line at the start of
+         the dump ends with the string \texttt{"}(Read)\texttt{"}, then the returned IAST
          Object will be the Object read from the Channel, rather than the
          Channel itself. For instance, if the group contains the dump of a
-         FitsChan, and the first line of the dump is {\tt "}Begin FitsChan(Read){\tt "},
+         FitsChan, and the first line of the dump is \texttt{"}Begin FitsChan(Read)\texttt{"},
          then the returned IAST object will be the Object read from the
          FitsChan, rather than the FitsChan itself. This facility is only
          available for top level objects (e.g. FitsChans contained within
@@ -1711,11 +1231,11 @@ higher-level utility tasks.
          \sstitem
          If the group contains the AST dump of a Channel (of any class),
          then the Object returned via IAST will be the Channel itself. The
-         exception to this is that if the {\tt "}Begin {\tt "} line at the start of
-         the dump ends with the string {\tt "}(Read){\tt "}, then the returned IAST
+         exception to this is that if the \texttt{"}Begin \texttt{"} line at the start of
+         the dump ends with the string \texttt{"}(Read)\texttt{"}, then the returned IAST
          Object will be the Object read from the Channel, rather than the
          Channel itself. For instance, if the group contains the AST dump of
-         a FitsChan, and the first line of the dump is {\tt "}Begin FitsChan(Read){\tt "},
+         a FitsChan, and the first line of the dump is \texttt{"}Begin FitsChan(Read)\texttt{"},
          then the returned IAST object will be the Object read from the
          FitsChan, rather than the FitsChan itself. This facility is only
          available for top level objects (e.g. FitsChans contained within
@@ -1758,7 +1278,7 @@ higher-level utility tasks.
    Remove a file
 }{
    \sstdescription{
-      This subroutine calls the {\tt "}PSX\_REMOVE{\tt "} RTL function to remove a
+      This subroutine calls the \texttt{"}PSX\_REMOVE\texttt{"} RTL function to remove a
       specified file. No error occurs if the file cannot be removed for
       any reason.
    }
@@ -1918,20 +1438,20 @@ higher-level utility tasks.
          It should contain entries with the following keys (the data type
          with which each entry is accessed is also shown):
 
-            {\tt "}JFREST(1){\tt "} - \_INTEGER
-            {\tt "}RA\_DEC(1){\tt "} - \_DOUBLE
-            {\tt "}RA\_DEC(2){\tt "} - \_DOUBLE
-            {\tt "}DPOS(1){\tt "} - \_DOUBLE
-            {\tt "}DPOS(2){\tt "} - \_DOUBLE
-            {\tt "}IDATE{\tt "} - \_CHAR
-            {\tt "}ITIME{\tt "} - \_CHAR
-            {\tt "}LSRFLG{\tt "} - \_INTEGER
-            {\tt "}V\_SETL(4){\tt "} - \_DOUBLE
-            {\tt "}JFCEN(1){\tt "} - \_INTEGER
-            {\tt "}JFINC(1){\tt "} - \_INTEGER
-            {\tt "}IFFREQ(1){\tt "} - \_DOUBLE
+            \texttt{"}JFREST(1)\texttt{"} - \_INTEGER
+            \texttt{"}RA\_DEC(1)\texttt{"} - \_DOUBLE
+            \texttt{"}RA\_DEC(2)\texttt{"} - \_DOUBLE
+            \texttt{"}DPOS(1)\texttt{"} - \_DOUBLE
+            \texttt{"}DPOS(2)\texttt{"} - \_DOUBLE
+            \texttt{"}IDATE\texttt{"} - \_CHAR
+            \texttt{"}ITIME\texttt{"} - \_CHAR
+            \texttt{"}LSRFLG\texttt{"} - \_INTEGER
+            \texttt{"}V\_SETL(4)\texttt{"} - \_DOUBLE
+            \texttt{"}JFCEN(1)\texttt{"} - \_INTEGER
+            \texttt{"}JFINC(1)\texttt{"} - \_INTEGER
+            \texttt{"}IFFREQ(1)\texttt{"} - \_DOUBLE
 
-         In addition, the KeyMap may contain an item {\tt "}CENTRECODE{\tt "} (\_INTEGER)
+         In addition, the KeyMap may contain an item \texttt{"}CENTRECODE\texttt{"} (\_INTEGER)
          that specifies the co-ordinate system to which the RA\_DEC and DPOS
          values refer. It may take any of the following values:
 
@@ -1953,14 +1473,14 @@ higher-level utility tasks.
          extension. If supplied, it should contain entries with the
          following keys:
 
-            {\tt "}CELLSIZE(1){\tt "} - \_DOUBLE
-            {\tt "}CELLSIZE(2){\tt "}  - \_DOUBLE
-            {\tt "}POSANGLE{\tt "} - \_DOUBLE
+            \texttt{"}CELLSIZE(1)\texttt{"} - \_DOUBLE
+            \texttt{"}CELLSIZE(2)\texttt{"}  - \_DOUBLE
+            \texttt{"}POSANGLE\texttt{"} - \_DOUBLE
 
-         In addition, the KeyMap may contain an item {\tt "}CELLCODE{\tt "} (\_INTEGER)
+         In addition, the KeyMap may contain an item \texttt{"}CELLCODE\texttt{"} (\_INTEGER)
          that specifies the co-ordinate system to which the CELLSIZE and
          POSANGLE values refer. It may take any of the values listed for
-         CENTRECODE in the {\tt "}KM1{\tt "} argument description above. If CELLCODE
+         CENTRECODE in the \texttt{"}KM1\texttt{"} argument description above. If CELLCODE
          is missing a value of 6 (FK4 B1950) is assumed.
       }
       \sstsubsection{
@@ -2067,13 +1587,13 @@ higher-level utility tasks.
 
          \sstitem
          The new axes are appended to the end of the existing axes, so the
-         axis indices associated with the new axes will extend from {\tt "}nold$+$1{\tt "}
-         to {\tt "}nold$+$nnew{\tt "}, where {\tt "}nold{\tt "} is the number of axes in the original
-         Frame, and {\tt "}nnew{\tt "} is the number of new axes.
+         axis indices associated with the new axes will extend from \texttt{"}nold$+$1\texttt{"}
+         to \texttt{"}nold$+$nnew\texttt{"}, where \texttt{"}nold\texttt{"} is the number of axes in the original
+         Frame, and \texttt{"}nnew\texttt{"} is the number of new axes.
 
          \sstitem
-         An error will be reported if the Nout attribute of {\tt "}map{\tt "} is
-         different to the Naxes attribute of {\tt "}frm{\tt "}.
+         An error will be reported if the Nout attribute of \texttt{"}map\texttt{"} is
+         different to the Naxes attribute of \texttt{"}frm\texttt{"}.
       }
    }
 }
@@ -2183,7 +1703,7 @@ higher-level utility tasks.
       \sstsubsection{
          bufsize
       }{
-         The length of the {\tt "}buf{\tt "} array.
+         The length of the \texttt{"}buf\texttt{"} array.
       }
       \sstsubsection{
          len
@@ -2194,7 +1714,7 @@ higher-level utility tasks.
          nval
       }{
          Address of an int in which to return the number of fixed length
-         strings returned in {\tt "}buf{\tt "}. This will be less than the number of
+         strings returned in \texttt{"}buf\texttt{"}. This will be less than the number of
          elements in the KeyMap entry if the supplied buffer is not large
          enough to hold all the strings in the entry.
       }
@@ -2251,7 +1771,7 @@ higher-level utility tasks.
          value
       }{
          A character array containing the concatenated fixed length
-         strings. The length of this array should be at least {\tt "}size$*$len{\tt "}.
+         strings. The length of this array should be at least \texttt{"}size$*$len\texttt{"}.
       }
       \sstsubsection{
          len
@@ -2261,7 +1781,7 @@ higher-level utility tasks.
       \sstsubsection{
          size
       }{
-         The number of fixed length strings in {\tt "}value{\tt "}.
+         The number of fixed length strings in \texttt{"}value\texttt{"}.
       }
       \sstsubsection{
          status
@@ -2324,7 +1844,7 @@ higher-level utility tasks.
       \sstitemlist{
 
          \sstitem
-         If {\tt "}frm{\tt "} is a FrameSet, the current Frame is checked first. If
+         If \texttt{"}frm\texttt{"} is a FrameSet, the current Frame is checked first. If
          no match is found, each other Frame is checked in turn, finishing with
          the base Frame. If any of these Frames match, it is left as the
          current Frame in the FrameSet on exit.
@@ -2339,7 +1859,7 @@ higher-level utility tasks.
    \sstdescription{
       This function creates an AST Object by reading the contents of a
       given text file. The file should contain a dump of an AST Object
-      such as produced by the {\tt "}atlShow{\tt "} function.
+      such as produced by the \texttt{"}atlShow\texttt{"} function.
    }
    \sstinvocation{
       AstObject $*$atlReadFile( const char $*$fname, const char $*$options,
@@ -2380,11 +1900,11 @@ higher-level utility tasks.
 }{
    \sstdescription{
       This function creates an AST Table by reading the contents of a
-      given text file. The text file format matches that of TOPCAT{\tt '}s
-      {\tt "}ASCII{\tt "} format, except that any comment lines before the first row
-      of column values that are of the form {\tt "}\# name = value{\tt "} or
-      {\tt "}! name = value{\tt "} are used to create Table parameters. Here {\tt "}name{\tt "}
-      is a contiguous block of alphanumeric characters, and {\tt "}value{\tt "}
+      given text file. The text file format matches that of TOPCAT\texttt{'}s
+      \texttt{"}ASCII\texttt{"} format, except that any comment lines before the first row
+      of column values that are of the form \texttt{"}\# name = value\texttt{"} or
+      \texttt{"}! name = value\texttt{"} are used to create Table parameters. Here \texttt{"}name\texttt{"}
+      is a contiguous block of alphanumeric characters, and \texttt{"}value\texttt{"}
       represents all characters following the equals sign, up to the end
       of the line, excluding leading and trailing white space. If value
       is a scalar integer or double, it is stored as such in the Table.
